fixed alignment for about area.

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ main{
 }
 
 .about {
-  margin-top: .3em;
+  margin-top: .65em;
 }
 
 .about--text{
